New entries should be added at the top


2005-03-27 Added ft2font NULL check to fix Japanase font bug - JDH

2005-03-27 Added sprint legend patch plus John Gill's tests and fix
           - JDH

==========================================================================

2005-03-19 0.73.1 released

2005-03-19 Reverted wxapp handling because it crashed win32 - JDH

2005-03-18 Add .number attribute to figure objects returned by figure() - FP

===========================================================================
2005-03-18 0.73 released

2005-03-16 Fixed labelsep bug

2005-03-16 Applied Darren's ticker fix for small ranges - JDH

2005-03-16 Fixed tick on horiz colorbar - JDH

2005-03-16 Added Japanses winreg patch - JDH

2005-03-15 backend_gtkagg.py: changed to use double buffering, this fixes
           the problem reported Joachim Berdal Haga - "Parts of plot lagging 
	   from previous frame in animation". Tested with anim.py and it makes
           no noticable difference to performance (23.7 before, 23.6 after) 
	   - SC

2005-03-14 add src/_backend_gdk.c extension to provide a substitute function
	   for pixbuf.get_pixels_array(). Currently pixbuf.get_pixels_array()
           only works with Numeric, and then only works if pygtk has been
	   compiled with Numeric support. The change provides a function
	   pixbuf_get_pixels_array() which works with Numeric and numarray and
	   is always available. It means that backend_gtk should be able to
	   display images and mathtext in all circumstances. - SC

2005-03-11 Upgraded CXX to 5.3.1

2005-03-10 remove GraphicsContextPS.set_linestyle()
	   and GraphicsContextSVG.set_linestyle() since they do no more than 
           the base class GraphicsContext.set_linestyle() - SC

2005-03-09 Refactored contour functionality into dedicated module

2005-03-09 Added Eric's contourf updates and Nadia's clabel functionality

2005-03-09 Moved colorbar to figure.Figure to expose it for API developers
          - JDH
