@@ -15,6 +15,7 @@ Plotting commands
   axis     - Set or return the current axis limits
   bar      - make a bar chart
   barh     - a horizontal bar chart  
+  boxplot  - make a box and whisker plot
   cla      - clear current axes
   clf      - clear a figure window
   close    - close a figure window
