@@ -15,6 +15,7 @@ _Plotting commands
   axis     - Set or return the current axis limits
   bar      - make a bar chart
   barh     - a horizontal bar chart
+  boxplot  - make a box and whisker plot
   cla      - clear current axes
   clabel   - label a contour plot
   clf      - clear a figure window
@@ -353,6 +354,7 @@ def plotting():
     axes     - Create a new axes
     axis     - Set or return the current axis limits
     bar      - make a bar chart
+    boxplot  - make a box and whiskers chart
     cla      - clear current axes
     clabel   - label a contour plot
     clf      - clear a figure window
@@ -456,7 +458,7 @@ def disconnect(cid):
     return get_current_fig_manager().canvas.mpl_disconnect(cid)
 disconnect.__doc__ = FigureCanvasBase.mpl_disconnect.__doc__
 
-def get_plot_commands(): return ( 'axes', 'axis', 'bar', 'cla', 'clf',
+def get_plot_commands(): return ( 'axes', 'axis', 'bar', 'boxplot', 'cla', 'clf',
     'close', 'colorbar', 'cohere', 'csd', 'draw', 'errorbar',
     'figlegend', 'figtext', 'figimage', 'figure', 'fill', 'gca',
     'gcf', 'gci', 'get', 'gray', 'barh', 'jet', 'hist', 'hold', 'imread',
@@ -1742,6 +1744,27 @@ def bar(*args, **kwargs):
     return ret
 bar.__doc__ = _shift_string(Axes.bar.__doc__) + """
 Addition kwargs: hold = [True|False] overrides default hold state"""
+
+# This function was autogenerated by boilerplate.py.  Do not edit as
+# changes will be lost
+def boxplot(*args, **kwargs):
+    # allow callers to override the hold state by passing hold=True|False
+    b = ishold()
+    h = popd(kwargs, 'hold', None)
+    if h is not None:
+        hold(h)
+    try:
+        ret =  gca().boxplot(*args, **kwargs)
+        draw_if_interactive()
+    except:
+        hold(b)
+        raise
+    
+    hold(b)
+    return ret
+boxplot.__doc__ = _shift_string(Axes.boxplot.__doc__) + """
+Addition kwargs: hold = [True|False] overrides default hold state"""
+
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
