@@ -1,5 +1,6 @@
 New entries should be added at the top
 
+2005-03-28 Applied boxplot and OSX font search patches
 
 2005-03-27 Added ft2font NULL check to fix Japanase font bug - JDH
 
